# pazaak-game-web3

./: README.md
client/src/app/: app.routes.ts
client/src/app/core/models/: collection-card.ts
client/src/app/core/services/blockchain-services/: start-game-blockchain-service.ts
client/src/app/core/services/cards-service/: cards-service.ts
client/src/app/features/phonk-audio-player/: phonk-audio-player.ts
client/src/app/pages/connect-to-game-page/: connect-to-game-page.ts
client/src/app/pages/create-game-page/: create-game-page.ts
client/src/app/pages/game-page/: game-page.html  game-page.ts
client/src/app/pages/home-page/: home-page.html
client/src/app/pages/manage-hand-collection/: manage-hand-collection.html  manage-hand-collection.scss  manage-hand-collection.ts
server/: .gitignore  docker-compose.yml  requirements.txt
server/src/: main.py
server/src/api/: dependencies.py
server/src/config/: settings.py
server/src/db/: session.py
server/src/migrations/: env.py
server/src/migrations/versions/: 944cd1233cb5_add_user_and_game_models.py
server/src/models/: __init__.py  game.py  user.py
server/src/redis_client/: client.py  types.py
server/src/websocket/: game.py
web3/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
web3/programs/pazaak/: Cargo.toml
web3/programs/pazaak/src/: lib.rs  lib_bak.rs
web3/programs/pazaak/src/states/: game_config.rs  game_room.rs  mod.rs
web3/tests/: create-game-room.ts  pazaak.ts
web3/web3-assets/token/: pzk-token.json
